// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SwitchField should render correctly 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="false"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="true"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="true"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            checked=""
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="true"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="false"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse2"
            disabled=""
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with label and checked 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-69h9wu-StyledText-variantStyles-variantStyles-colorStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #390171;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="true"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="true"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            checked=""
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
      <div
        class="e1g1zfwd0 cache-69h9wu-StyledText-variantStyles-variantStyles-colorStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with offLabel 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="false"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly with onLabel 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="false"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </div>
  </form>
</DocumentFragment>
`;

exports[`SwitchField should render correctly without onLabel and offLabel but has label 1`] = `
<DocumentFragment>
  .cache-1rm777a-StyledSwitchFieldContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
}

.cache-1c3gp4t-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.cache-1c3gp4t-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  opacity: 0.3;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 34px;
  position: relative;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  padding: 4px;
  height: 24px;
  background-color: #c4c9d6;
  min-width: 48px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse5 {
  position: absolute;
  margin-left: 4px;
  margin-right: 4px;
  left: 0;
  right: 24px;
  -webkit-transition: all 250ms;
  transition: all 250ms;
  top: 4px;
  bottom: 0;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch .e1x48wse6 {
  display: block;
  border-radius: 50%;
  width: 24px;
  height: 24px;
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true']>.e1x48wse5 {
  -webkit-transform: translateX(100%);
  -moz-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: 32px;
  margin-right: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[aria-checked='true'] .e1x48wse4 {
  margin-right: 32px;
  margin-left: 8px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] {
  padding: 4px;
  height: 16px;
  min-width: 32px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse5 {
  right: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'] .e1x48wse6 {
  width: 16px;
  height: 16px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small']:not([aria-checked='true'])>.e1x48wse4 {
  margin-left: calc(
          16px + 4px
        );
  margin-right: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-size='small'][aria-checked='true'] .e1x48wse4 {
  margin-right: calc(
          16px + 4px
        );
  margin-left: 4px;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true'] {
  color: #151a2d;
  background-color: #4f0599;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']>.e1x48wse4 {
  color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='primary'][aria-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] {
  color: #4a4f62;
  background-color: #c4c9d6;
  font-weight: bold;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'] .e1x48wse6 {
  background-color: #ffffff;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] {
  color: #149a7b;
  background-color: #cdfcf1;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true'] .e1x48wse6 {
  background-color: #22c8a2;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']>.e1x48wse4 {
  color: #151a2d;
}

.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus-within,
.cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch[data-variant='success'][aria-checked='true']:focus {
  box-shadow: 0 0 1px 2px #ffffff,0 0 1px 3px #22c8a2;
}

.cache-322r38-StyledCheckbox {
  position: absolute;
  opacity: 0.01;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-322r38-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-1clwifm-StyledText-variantStyles-variantStyles-colorStyles-colorStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
}

<form
    novalidate=""
  >
    <div
      class="cache-1rm777a-StyledSwitchFieldContainer e1fcp5360"
    >
      <label
        aria-checked="false"
        aria-disabled="false"
        class="cache-1c3gp4t-StyledLabel e1x48wse1"
      >
        <div
          aria-checked="false"
          class="cache-3844hw-StyledSwitch-primary-primary-StyledSwitch-StyledSwitch-success-success-StyledSwitch-StyledSwitch e1x48wse3"
          data-size="small"
          data-variant="primary"
        >
          <div
            class="cache-24p4j6-SwitchBallContainer e1x48wse5"
          >
            <span
              class="cache-hol3kh-SwitchBall e1x48wse6"
            />
          </div>
          <input
            class="cache-322r38-StyledCheckbox e1x48wse2"
            id="test"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
      <div
        class="e1g1zfwd0 cache-1clwifm-StyledText-variantStyles-variantStyles-colorStyles-colorStyles"
      >
        test
      </div>
    </div>
  </form>
</DocumentFragment>
`;
